<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.notima.generic</groupId>
	<artifactId>businessobjects</artifactId>
	<version>1.0.1-SNAPSHOT</version>
	<packaging>bundle</packaging>
	<name>Notima Generic Business Objects</name>

	<description>Generic business objects and methods to be used as a common format
	when transforming between different formats and systems.</description>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<karaf.version>4.4.6</karaf.version>
		<notima-util.version>0.0.7</notima-util.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>3.2.0</version>
		</dependency>
		
		<dependency>
		    <groupId>jakarta.xml.bind</groupId>
		    <artifactId>jakarta.xml.bind-api</artifactId>
		    <version>4.0.2</version>
		</dependency>

		<!-- JAXB implementation -->

		<dependency>
		        <groupId>org.glassfish.jaxb</groupId>
		        <artifactId>jaxb-runtime</artifactId>
		        <version>4.0.2</version>
	    </dependency>

		<dependency>
			<groupId>org.notima</groupId>
			<artifactId>notima-util</artifactId>
			<version>${notima-util.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
	
	<build>
	
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/jaxb.index</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>*.properties</include>
				</includes>
			</resource>
		</resources>
	
       <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.karaf.tooling</groupId>
                    <artifactId>karaf-maven-plugin</artifactId>
                    <version>${karaf.version}</version>
                    <extensions>true</extensions>
                </plugin>
            </plugins>
        </pluginManagement>	
	
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.8</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>org.notima.factoring,
										org.notima.generic.businessobjects,
										org.notima.generic.businessobjects.util,
										org.notima.generic.businessobjects.tax,
										org.notima.generic.businessobjects.tools,
										org.notima.generic.businessobjects.exception,
										org.notima.generic.ifacebusinessobjects
						</Export-Package>
						<Import-Package>
							jakarta.xml.bind;version="[3.0,4.1)",
							jakarta.xml.bind.annotation;version="[3.0,4.1)",
							jakarta.xml.bind.annotation.adapters;version="[3.0,4.1)",
							*
						</Import-Package>
					</instructions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					<stagingProgressTimeoutMinutes>25</stagingProgressTimeoutMinutes>
					<keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
					<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<!-- verify if it should be signed, deploy when snapshot -->
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<url>https://github.com/notima/businessobjects</url>
	<organization>
		<name>Ekonomibolaget Notima AB</name>
		<url>https://github.com/notima</url>
	</organization>
	<scm>
		<url>https://github.com/notima/businessobjects</url>
		<connection>scm:git:git://github.com/notima/businessobjects.git</connection>
		<developerConnection>scm:git:https://github.com:notima/businessobjects.git</developerConnection>
	</scm>
	<issueManagement>
		<url>https://github.com/notima/businessobjects/issues</url>
		<system>GitHub</system>
	</issueManagement>
	
	<developers>
		<developer>
			<name>Daniel Tamm</name>
			<email>daniel@notima.se</email>
			<organization>Ekonomibolaget Notima AB</organization>
			<organizationUrl>https://github.com/notima</organizationUrl>
		</developer>
	</developers>


</project>
